--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+h1{
+	text-align: center;
+}
+.middle{
+	width: 100%;
+	margin-bottom: 30px;
+}
+.middle, tr, td{
+	border: 1px solid black;
+	border-spacing: 1px;
+}
+.right{
+	text-align: right;
+}
+.center-col{
+	text-align: center;
+}
+td{
+	padding: 1px;
+}
+.green{
+	background-color: green;
+}
+.blue{
+	background-color: blue;
+}
