--- a/styles.css
+++ b/styles.css
@@ -5,23 +5,26 @@ h1{
 .middle{
 	width: 100%;
 	margin-bottom: 30px;
-}
-.middle, tr, td{
-	border: 1px solid black;
 	border-spacing: 1px;
+}
+.middle, .middle tr, .middle td{
+	border: 1px solid black;
+}
+.middle td{
+	padding: 1px;
 }
 .right{
 	text-align: right;
 }
-.center-col{
+.center{
 	text-align: center;
 }
 td{
 	padding: 1px;
 }
-.green{
+.green, .green td{
 	background-color: green;
 }
-.blue{
+.blue, .blue td{
 	background-color: blue;
 }
